fix: 允許監控狀態保留 null 值
EXTRACTED 監控可能把缺少或 JSON null 的欄位寫入 last_state。改用允許 null 的不可變防禦性複本，避免下一輪 claim 在 Map.copyOf 拋出 NPE 並阻塞整批監控。